# marimo_1ere_explo_bixi_duckdb

./: .gitignore  README.md  marimo_1ere_explo_bixi_duckdb.py  pyproject.toml
