[project]
name = "marimo-1ere-explo-duckdb"
version = "0.1.0"
description = "Exercice pour découvrir DuckDB avec l'aide de Marimo"
readme = "README.md"
authors = ["Antoine Giraud"]
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.19.6",
    "duckdb>=1.4.3",
    "folium>=0.20.0",
    "polars>=1.37.1",
    "sqlglot>=28.6.0",
]
