[project]
name = "marimo-1ere-explo-duckdb"
version = "0.1.0"
description = "1ère explo pour découvrir DuckDB 🦆 à l'aide des données bixi 🚲 & Marimo"
readme = "README.md"
authors = [
    { name = "Antoine Giraud" }
]
requires-python = ">=3.13"

dependencies = [
    "marimo[sql]>=0.21.1",
    "folium>=0.20.0",
    "duckdb>=1.5.0",
]
